VB/Lib/xcgui.bas

Declare Function XTree_GetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long) As Long
Declare Function XTree_SetSelectItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long) As Boolean
Declare Function XTree_GetSelectItem Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XTree_IsExpand Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long) As Boolean
Declare Function XTree_ExpandItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long, ByVal bExpand As Boolean) As Boolean
Declare Function XTree_HitTest Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Function XTree_HitTestOffet Lib "xcgui.dll" (ByVal hEle As Long, ByVal pPt As Point) As Long
Declare Function XTree_GetFirstChildItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long) As Long
Declare Function XTree_GetNextSiblingItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long) As Long
Declare Sub XTree_SetIndentation Lib "xcgui.dll" (ByVal hEle As Long, ByVal nWidth As Long)
Declare Function XTree_GetIndentation Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XTree_SetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHeight As Long, ByVal nSelHeight As Long)
Declare Sub XTree_GetItemHeightDefault Lib "xcgui.dll" (ByVal hEle As Long, ByVal pHeight As Long, ByVal pSelHeight As Long)
Declare Sub XTree_SetItemHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long, ByVal nHeight As Long, ByVal nSelHeight As Long)
Declare Sub XTree_GetItemHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long, ByVal pHeight As Long, ByVal pSelHeight As Long)
Declare Sub XTree_SetItemColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XTree_SetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XTree_GetItemColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XTree_GetItemColorSel Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XTree_GetTemplateObject Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long, ByVal nTempItemID As Long) As Long
Declare Sub XTree_BindAdapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Function XTree_GetAdapter Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XWnd_RegEventEx Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pEvent As Long)
Declare Function XWnd_RemoveEventEx Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pEvent As Long) As Boolean
Declare Function XWnd_RemovegEvent Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nEvent As Long, ByVal pFun As Long) As Boolean
Declare Function XWnd_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pTitle As String, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Function XWnd_CreateEx Lib "xcgui.dll" (ByVal dwExStyle As Long, ByVal lpClassName As String, ByVal lpWindowName As String, ByVal dwStyle As Long, ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hWndParent As Long, ByVal XCStyle As Long) As Long
Declare Function XWnd_AddEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hEle As Long) As Boolean
Declare Function XWnd_InsertEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hChildEle As Long, ByVal hDestEle As Long) As Boolean
Declare Function XWnd_AddShape Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hShape As Long) As Boolean
Declare Function XWnd_GetHWND Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Sub XWnd_EnableDragBorder Lib "xcgui.dll" (ByVal hWindow As Long, ByVal bEnable As Boolean)
Declare Sub XWnd_EnableDragWindow Lib "xcgui.dll" (ByVal hWindow As Long, ByVal bEnable As Boolean)
Declare Sub XWnd_EnableDrawBk Lib "xcgui.dll" (ByVal hWindow As Long, ByVal bEnable As Boolean)
Declare Sub XWnd_RedrawWnd Lib "xcgui.dll" (ByVal hWindow As Long)
Declare Sub XWnd_RedrawWndRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRect As rect, ByVal bImmediately As Boolean)
Declare Sub XWnd_SetFocusEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hFocusEle As Long)
Declare Function XWnd_GetFocusEle Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Sub XWnd_SetCursor Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hCursor As Long)
Declare Function XWnd_GetCursor Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Function XWnd_SetCursorSys Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hCursor As Long) As Long
Declare Sub XWnd_SetFont Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hFontx As Long)
Declare Sub XWnd_SetID Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nID As Long)
Declare Function XWnd_GetID Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Sub XWnd_SetCaptureEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hEle As Long)
Declare Function XWnd_GetCaptureEle Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Function XWnd_SetLayoutEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long, ByVal hEle As Long) As Boolean
Declare Function XWnd_GetLayoutEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long) As Long
Declare Sub XWnd_BindLayoutObject Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long, ByVal hLayout As Long)
Declare Function XWnd_GetLayoutObject Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long) As Long
Declare Sub XWnd_SetLayoutBkColor Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XWnd_SetLayoutSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal left As Long, ByVal top As Long, ByVal right As Long, ByVal bottom As Long)
Declare Sub XWnd_GetLayoutSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pBorderSize As BorderSize_)
Declare Sub XWnd_SetDragBorderSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal left As Long, ByVal top As Long, ByVal right As Long, ByVal bottom As Long)
Declare Sub XWnd_GetDragBorderSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pSize As BorderSize_)
Declare Sub XWnd_SetMinimumSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal width As Long, ByVal height As Long)
Declare Function XWnd_HitChildEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pPt As Point) As Long
Declare Function XWnd_GetChildCount Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Function XWnd_GetChildByIndex Lib "xcgui.dll" (ByVal hWindow As Long, ByVal index As Long) As Long
Declare Function XWnd_GetChildByID Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nID As Long) As Long
Declare Function XWnd_GetEle Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nID As Long) As Long
Declare Sub XWnd_GetDrawRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRcPaint As rect)
Declare Function XWnd_ShowWindow Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nCmdShow As Long) As Boolean
Declare Sub XWnd_AdjustLayout Lib "xcgui.dll" (ByVal hWindow As Long)
Declare Sub XWnd_CloseWindow Lib "xcgui.dll" (ByVal hWindow As Long)
Declare Sub XWnd_CreateCaret Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hEle As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XWnd_SetCaretSize Lib "xcgui.dll" (ByVal hWindow As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XWnd_SetCaretPos Lib "xcgui.dll" (ByVal hWindow As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XWnd_SetCaretPosEx Lib "xcgui.dll" (ByVal hWindow As Long, ByVal x As Long, ByVal y As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XWnd_SetCaretColor Lib "xcgui.dll" (ByVal hWindow As Long, ByVal color As Long)
Declare Sub XWnd_ShowCaret Lib "xcgui.dll" (ByVal hWindow As Long, ByVal bShow As Boolean)
Declare Sub XWnd_DestroyCaret Lib "xcgui.dll" (ByVal hWindow As Long)
Declare Function XWnd_GetCaretHELE Lib "xcgui.dll" (ByVal hWindow As Long) As Long
Declare Function XWnd_GetClientRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRect As rect) As Boolean
Declare Sub XWnd_GetBodyRect Lib "xcgui.dll" (ByVal hWindow As Long, ByVal pRect As rect)
Declare Function XWnd_SetTimer Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nIDEvent As Long, ByVal uElapse As Long) As Long
Declare Function XWnd_KillTimer Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nIDEvent As Long) As Boolean
Declare Sub XWnd_SetImage Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hImage As Long)
Declare Sub XWnd_SetImageLayout Lib "xcgui.dll" (ByVal hWindow As Long, ByVal hImage As Long, ByVal nFlag As Long)
Declare Sub XWnd_SetTransparentFlag Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nFlag As Long)
Declare Sub XWnd_SetTransparentAlpha Lib "xcgui.dll" (ByVal hWindow As Long, ByVal alpha As Byte)
Declare Sub XWnd_SetTransparentColor Lib "xcgui.dll" (ByVal hWindow As Long, ByVal color As Long)
Declare Function XWnd_RegEventTest Lib "xcgui.dll" (ByVal nEvent As Long, ByVal pParamType As Long) As Boolean
Declare Sub XTextBlock_GetText Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal pOut As String, ByVal nOutLen As Long)
Declare Sub XWnd_RegEventC Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nEvent As Long, ByVal pFun As Long)
Declare Sub XWnd_RegEventC1 Lib "xcgui.dll" (ByVal hWindow As Long, ByVal nEvent As Long, ByVal pFun As Long)


Declare Function ClientToScreen Lib "User32.dll" (ByVal hWnd As Long, ByRef pPt As Point) As Long


Type rect

    x As Long
    y As Long
    cx As Long
    cy As Long

End Type

Type Point

    x As Long
    y As Long

End Type

Type size

    cx As Long
    cy As Long

End Type

Type template_info_i

    info As Long

End Type

Type BorderSize_

    leftSize As Long
    topSize As Long
    RightSzie As Long
    bottom As Long

End Type

Type SpaceSize_

    leftSize As Long
    topSize As Long
    RightSzie As Long
    bottom As Long

End Type

Type PaddingSize_

    leftSize As Long
    topSize As Long
    RightSzie As Long
    bottom As Long

End Type

Type listBox_item_i

    nUserData As Long
    nHeight As Long
    nSelHeight As Long
    bSelect As Long
    index As Long
    rcItem As rect
    hLayout As Long
    pInfo As Long

End Type

Type LOGFONTW

    lfHeight As Long
    lfWidth As Long
    lfEscapement As Long
    lfOrientation As Long
    lfWeight As Long
    lfItalic As Byte
    lfUnderline As Byte
    lfStrikeOut As Byte
    lfCharSet As Byte
    lfOutPrecision As Byte
    lfClipPrecision As Byte
    lfQuality As Byte
    lfPitchAndFamily As Byte
    lfFaceName(32) As Integer

End Type

Type LOGFONT

    lfHeight As Long
    lfWidth As Long
    lfEscapement As Long
    lfOrientation As Long
    lfWeight As Long
    lfItalic As Byte
    lfUnderline As Byte
    lfStrikeOut As Byte
    lfCharSet As Byte
    lfOutPrecision As Byte
    lfClipPrecision As Byte
    lfQuality As Byte
    lfPitchAndFamily As Byte
    lfFaceName(32) As Byte

End Type

Type listBox_item_Info_i

    nUserData As Long
    nHeight As Long
    nSelHeight As Long

End Type

Type list_item_i

    index As Long
    iSubItem As Long
    nUserData As Long
    bSelect As Long
    rcItem As rect
    hLayout As Long
    pInfo  As Long

End Type

Type list_header_item_i

    nState As Long
    nUserData As Long
    bSelect As Long
    rcItem As rect

End Type

Type tree_item_i

    nID As Long
    nDepth As Long
    nState As Long
    nHeight As Long
    nSelHeight As Long
    nUserData As Long
    bSelect As Long
    bExpand As Long
    rcItem As rect
    hLayout As Long
    pInfo As Long

End Type

Type listView_item_i

    iGroup As Long
    iItem As Long
    userData As Long
    state As Long
    bSelect As Long
    rect As rect
    hLayout As Long
    pInfo As Long

End Type

Type layout_info_i

    width As Long
    height As Long

End Type

Public Const XC_ERROR                           As Long = -1    '///<错误类型

Public Const XC_WINDOW                          As Long = 1    '///<窗口

Public Const XC_MODALWINDOW                     As Long = 2    '///<模态窗口

Public Const XC_FRAMEWND                        As Long = 3    '///<框架窗口

Public Const XC_FLOATWND                        As Long = 4    '///<浮动窗口
